<resources>
    <string name="app_name">KoohiiAite</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Primitives, Keyword, Kanji, Frame #</string>
    <string name="unSet">unSet</string>
    <string name="default_results_text">All items displayed</string>
    <string name="fragment_kanji_label">Kanji</string>
    <string name="story_fragment_heisigid_label">Heisig Frame #</string>
    <string name="story_fragment_keyword_label">Keyword</string>
    <string name="story_fragment_story_label">Story</string>
    <string name="dictionary_fragment_onyomi_label">音読み (On-Yomi)</string>
    <string name="dictionary_fragment_kunyomi_label">訓読み (Kun-Yomi)</string>
    <string name="dictionary_fragment_meanings_label">Meanings</string>
    <string name="dictionary_fragment_sample_words_label">Sample Words</string>
    <string name="dictionary_fragment_frequency_label">Frequency</string>
    <string name="sample_fragment_freq_label">Freq</string>
    <string name="sample_fragment_kanji_label">Kanji Reading</string>
    <string name="sample_fragment_category_label">Category</string>
    <string name="sample_fragment_hiragana_label">Hiragana Reading</string>
    <string name="sample_fragment_english_label">English Meaning</string>
    <string name="detail_menu_prev">Prev</string>
    <string name="detail_menu_next">Next</string>
    <string name="action_primitives">Primitives</string>
    <string name="title_primitives">View Primitives</string>
    <string name="dialog_title_edit_keyword">Edit Keyword</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_default">Default</string>
    <string name="list_indicator_joyo">JOYO</string>
    <string name="list_indicator_story">STORY</string>
    <string name="list_indicator_keyword">KEYWORD</string>
    <string name="filter_label_joyo">Is Joyo</string>
    <string name="filter_label_keyword">Has Custom Keyword</string>
    <string name="filter_label_story">Has Story</string>
    <string name="filter_hint">Filter…</string>
    <string name="filter_state_joyo">Joyo[%s]</string>
    <string name="filter_state_keyword">Keyword[%s]</string>
    <string name="filter_state_story">Story[%s]</string>
    <string name="button_choose_file">Choose CSV</string>
    <string name="button_confirm">Confirm</string>
    <string name="title_import_story">Import Stories</string>
    <string name="action_import_story">Import Stories</string>
    <string name="title_choose_csv">Locate my_stories.csv</string>
    <string-array name="values_array_filter">
        <item>Unset</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="button_koohii">Open %s in Koohii</string>
    <string name="description_primitive_image">Primitive Image</string>
    <string name="keyword_hint">New Keyword</string>
</resources>
