<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/keyword_dialog_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/keyword_hint"
        android:inputType="text"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/keyword_dialog_cancel_button"
            style="@style/KoohiiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/keyword_dialog_default_button"
            style="@style/KoohiiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_default" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/keyword_dialog_submit_button"
            style="@style/KoohiiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit" />

    </LinearLayout>

</LinearLayout>