<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/story_import_button_cancel_import"
            style="@style/KoohiiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/story_import_button_confirm_import"
            style="@style/KoohiiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/button_confirm" />

        <Button
            android:id="@+id/story_import_button_choose_file"
            style="@style/KoohiiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/button_choose_file" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/story_import_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/story_import_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/import_story_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false" />

</LinearLayout>