<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/kanji_list_item"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:textColor="@android:color/white"
        android:background="@color/ka_dark2"
        android:textSize="36sp"
        android:maxLines="1"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heisig_id_list_item"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:background="@color/ka_dark2"
                android:textColor="@color/ka_bright1"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/keyword_list_item"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/ka_dark2"
                android:textColor="@color/ka_bright2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/primitives_list_item"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/ka_neutral"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ka_dark2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_indicator_joyo"
                android:layout_width="match_parent"
                android:layout_weight=".33"
                android:layout_height="match_parent"
                android:background="@color/ka_dark2"
                android:textColor="@color/ka_neutral"
                android:text="@string/list_indicator_joyo"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center" />

            <TextView
                android:id="@+id/list_indicator_keyword"
                android:layout_width="match_parent"
                android:layout_weight=".33"
                android:layout_height="match_parent"
                android:background="@color/ka_dark2"
                android:textColor="@color/ka_neutral"
                android:text="@string/list_indicator_keyword"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center" />

            <TextView
                android:id="@+id/list_indicator_story"
                android:layout_width="match_parent"
                android:layout_weight=".33"
                android:layout_height="match_parent"
                android:background="@color/ka_dark2"
                android:textColor="@color/ka_neutral"
                android:text="@string/list_indicator_story"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
